Drop tanks and enemy ejector seats
-fixed rockwings on contact setting not working
-added AI dropping fuel tanks on contact
-added ejector seats to the enemy aircraft

--- a/CheesesAITweaks/CheesesAITweaks.csproj
+++ b/CheesesAITweaks/CheesesAITweaks.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="Patch_AIPilot.cs" />
     <Compile Include="Patch_Autopilot.cs" />
+    <Compile Include="Patch_UnitSpawner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
