--- a/CheesesAITweaks/CheesesAITweaks.csproj
+++ b/CheesesAITweaks/CheesesAITweaks.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AICrewBailer.cs" />
     <Compile Include="CheeseAIHelper.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Patch_AIPilot.cs" />
